Refactor ImageConverterTest to improve format handling and representation validation. Added dynamic exclusion of unsupported file formats and enhanced conversion verification, ensuring accurate processing of image formats.